--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!-- Add scripts here -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
 
         <script src="main.js"></script>
     </head>
@@ -28,11 +29,11 @@
         <div ng-controller="controller">
         {{ title }}
 
-        <br>
-
-        <p>Filter the table: 
-        <input type="text" name="search" placeholder="Search" ng-model="searchTerm">
+        <p>
+            Filter the table: <input type="text" name="search" placeholder="Search" ng-model="searchTerm">
+            Total expense: {{ total }}
         </p>
+        
 
         <form name="expenseForm" novalidate><table>
             <tr>
